--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-body{
-    background-color: paleturquoise;
+nav ul li {
+    display: inline;
 }
-p{
-    color: peru;
+#adres{
+background-color: grey;
 }
-img{
-    float: left;
-    width: 200px;
-    height: 150px;
+form {
+width: 200px;
 }
